[package]
name = "debug_services"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm = { git = "https://github.com/tech-paws/vm.git" }
vm_math = { git = "https://github.com/tech-paws/vm_math.git" }
vm_buffers = { git = "https://github.com/tech-paws/vm_buffers.git" }
env_logger = "0.8.2"
log = "0.4.13"
regex = "1"
lazy_static = "1.4.0"
